--- a/webcam_segmentation.ipynb
+++ b/webcam_segmentation.ipynb
@@ -43,6 +43,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#IF CUUDA added \n",
+    "#FOR NOW IT WORKS ONLU ON CUDA MODE\n",
+    "\n",
     "if torch.cuda.is_available():\n",
     "    cudnn.fastest = True\n",
     "    torch.set_default_tensor_type('torch.cuda.FloatTensor')"
@@ -55,6 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "##SOME PARAMETERS ARGS\n",
     "sc=0.45\n",
     "top_k =15\n",
     "color_cache = defaultdict(lambda: {})\n",
@@ -79,11 +83,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\deepa\\anaconda3\\envs\\newtest\\lib\\site-packages\\torch\\jit\\_recursive.py:260: UserWarning: 'pred_layers' was found in ScriptModule constants,  but it is a non-constant submodule. Consider removing it.\n",
+      "C:\\Users\\deepa\\anaconda3\\envs\\newenv\\lib\\site-packages\\torch\\jit\\_recursive.py:260: UserWarning: 'lat_layers' was found in ScriptModule constants,  but it is a non-constant submodule. Consider removing it.\n",
       "  warnings.warn(\"'{}' was found in ScriptModule constants, \"\n",
-      "C:\\Users\\deepa\\anaconda3\\envs\\newtest\\lib\\site-packages\\torch\\jit\\_recursive.py:260: UserWarning: 'downsample_layers' was found in ScriptModule constants,  but it is a non-constant submodule. Consider removing it.\n",
+      "C:\\Users\\deepa\\anaconda3\\envs\\newenv\\lib\\site-packages\\torch\\jit\\_recursive.py:260: UserWarning: 'downsample_layers' was found in ScriptModule constants,  but it is a non-constant submodule. Consider removing it.\n",
       "  warnings.warn(\"'{}' was found in ScriptModule constants, \"\n",
-      "C:\\Users\\deepa\\anaconda3\\envs\\newtest\\lib\\site-packages\\torch\\jit\\_recursive.py:260: UserWarning: 'lat_layers' was found in ScriptModule constants,  but it is a non-constant submodule. Consider removing it.\n",
+      "C:\\Users\\deepa\\anaconda3\\envs\\newenv\\lib\\site-packages\\torch\\jit\\_recursive.py:260: UserWarning: 'pred_layers' was found in ScriptModule constants,  but it is a non-constant submodule. Consider removing it.\n",
       "  warnings.warn(\"'{}' was found in ScriptModule constants, \"\n"
      ]
     },
@@ -96,6 +100,8 @@
     }
    ],
    "source": [
+    "#LOADING MODEL\n",
+    "\n",
     "print('Loading model...', end='')\n",
     "net = Yolact()\n",
     "net.load_weights(\"model/yolact_base_54_800000.pth\")\n",
@@ -111,6 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#FOR POST PROCESSING OF IMAGE \n",
     "\n",
     "def prep_display(dets_out, img, h, w, undo_transform=True, class_color=False, mask_alpha=0.45, fps_str=''):\n",
     "    \n",
@@ -224,59 +231,51 @@
     "        preds = net(batch)\n",
     "\n",
     "    res = prep_display(preds, frame, None, None, undo_transform=False)\n",
-    "    return res"
+    "    return res\n",
+    "\n",
+    " image = evaluateimg(frame)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "fcc98ec7",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'numpy' has no attribute 'int'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m ret, frame \u001b[38;5;241m=\u001b[39m cap\u001b[38;5;241m.\u001b[39mread()\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m ret:\n\u001b[1;32m----> 7\u001b[0m     image \u001b[38;5;241m=\u001b[39m \u001b[43mevaluateimg\u001b[49m\u001b[43m(\u001b[49m\u001b[43mframe\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# Check if the frame was successfully captured\u001b[39;00m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m ret:\n",
-      "Cell \u001b[1;32mIn[6], line 7\u001b[0m, in \u001b[0;36mevaluateimg\u001b[1;34m(img)\u001b[0m\n\u001b[0;32m      5\u001b[0m batch \u001b[38;5;241m=\u001b[39m FastBaseTransform()(frame\u001b[38;5;241m.\u001b[39munsqueeze(\u001b[38;5;241m0\u001b[39m))\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mno_grad():\n\u001b[1;32m----> 7\u001b[0m     preds \u001b[38;5;241m=\u001b[39m \u001b[43mnet\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbatch\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      9\u001b[0m res \u001b[38;5;241m=\u001b[39m prep_display(preds, frame, \u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;28;01mNone\u001b[39;00m, undo_transform\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m res\n",
-      "File \u001b[1;32m~\\anaconda3\\envs\\newtest\\lib\\site-packages\\torch\\nn\\modules\\module.py:1501\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1496\u001b[0m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[0;32m   1497\u001b[0m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[0;32m   1498\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_pre_hooks\n\u001b[0;32m   1499\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[0;32m   1500\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[1;32m-> 1501\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m forward_call(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m   1502\u001b[0m \u001b[38;5;66;03m# Do not call functions when jit is used\u001b[39;00m\n\u001b[0;32m   1503\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[38;5;241m=\u001b[39m [], []\n",
-      "File \u001b[1;32m~\\Desktop\\project\\ML\\yolact\\yolact\\yolact.py:678\u001b[0m, in \u001b[0;36mYolact.forward\u001b[1;34m(self, x)\u001b[0m\n\u001b[0;32m    675\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    676\u001b[0m         pred_outs[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mconf\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m F\u001b[38;5;241m.\u001b[39msoftmax(pred_outs[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mconf\u001b[39m\u001b[38;5;124m'\u001b[39m], \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m--> 678\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdetect\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpred_outs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32m~\\Desktop\\project\\ML\\yolact\\yolact\\layers\\functions\\detection.py:71\u001b[0m, in \u001b[0;36mDetect.__call__\u001b[1;34m(self, predictions, net)\u001b[0m\n\u001b[0;32m     69\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m batch_idx \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(batch_size):\n\u001b[0;32m     70\u001b[0m     decoded_boxes \u001b[38;5;241m=\u001b[39m decode(loc_data[batch_idx], prior_data)\n\u001b[1;32m---> 71\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdetect\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbatch_idx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mconf_preds\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdecoded_boxes\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmask_data\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minst_data\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     73\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m result \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m proto_data \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m     74\u001b[0m         result[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mproto\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m proto_data[batch_idx]\n",
-      "File \u001b[1;32m~\\Desktop\\project\\ML\\yolact\\yolact\\layers\\functions\\detection.py:103\u001b[0m, in \u001b[0;36mDetect.detect\u001b[1;34m(self, batch_idx, conf_preds, decoded_boxes, mask_data, inst_data)\u001b[0m\n\u001b[0;32m    101\u001b[0m         boxes, masks, classes, scores \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfast_nms(boxes, masks, scores, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnms_thresh, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtop_k)\n\u001b[0;32m    102\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 103\u001b[0m     boxes, masks, classes, scores \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtraditional_nms\u001b[49m\u001b[43m(\u001b[49m\u001b[43mboxes\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmasks\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mscores\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnms_thresh\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconf_thresh\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    105\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39muse_cross_class_nms:\n\u001b[0;32m    106\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mWarning: Cross Class Traditional NMS is not implemented.\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "File \u001b[1;32m~\\Desktop\\project\\ML\\yolact\\yolact\\layers\\functions\\detection.py:209\u001b[0m, in \u001b[0;36mDetect.traditional_nms\u001b[1;34m(self, boxes, masks, scores, iou_threshold, conf_thresh)\u001b[0m\n\u001b[0;32m    206\u001b[0m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[0;32m    208\u001b[0m preds \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mcat([boxes[conf_mask], cls_scores[:, \u001b[38;5;28;01mNone\u001b[39;00m]], dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m.\u001b[39mcpu()\u001b[38;5;241m.\u001b[39mnumpy()\n\u001b[1;32m--> 209\u001b[0m keep \u001b[38;5;241m=\u001b[39m \u001b[43mcnms\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpreds\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43miou_threshold\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    210\u001b[0m keep \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mTensor(keep, device\u001b[38;5;241m=\u001b[39mboxes\u001b[38;5;241m.\u001b[39mdevice)\u001b[38;5;241m.\u001b[39mlong()\n\u001b[0;32m    212\u001b[0m idx_lst\u001b[38;5;241m.\u001b[39mappend(idx[keep])\n",
-      "File \u001b[1;32m~\\Desktop\\project\\ML\\yolact\\yolact\\utils\\cython_nms.pyx:36\u001b[0m, in \u001b[0;36mutils.cython_nms.nms\u001b[1;34m()\u001b[0m\n\u001b[0;32m     34\u001b[0m cdef int ndets = dets.shape[0]\n\u001b[0;32m     35\u001b[0m cdef np.ndarray[np.int_t, ndim=1] suppressed = \\\n\u001b[1;32m---> 36\u001b[0m         np.zeros((ndets), dtype=np.int)\n\u001b[0;32m     37\u001b[0m \n\u001b[0;32m     38\u001b[0m # nominal indices\n",
-      "File \u001b[1;32m~\\anaconda3\\envs\\newtest\\lib\\site-packages\\numpy\\__init__.py:284\u001b[0m, in \u001b[0;36m__getattr__\u001b[1;34m(attr)\u001b[0m\n\u001b[0;32m    281\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtesting\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Tester\n\u001b[0;32m    282\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m Tester\n\u001b[1;32m--> 284\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodule \u001b[39m\u001b[38;5;132;01m{!r}\u001b[39;00m\u001b[38;5;124m has no attribute \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    285\u001b[0m                      \u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{!r}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(\u001b[38;5;18m__name__\u001b[39m, attr))\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'numpy' has no attribute 'int'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Open the default camera (camera index 0)\n",
     "cap = cv2.VideoCapture(0)\n",
     "\n",
+    "# Continuously capture frames from the webcam\n",
     "while True:\n",
+    "    # Read a frame from the camera\n",
     "    ret, frame = cap.read()\n",
-    "\n",
-    "    if ret:\n",
-    "        image = evaluateimg(frame)\n",
     "\n",
     "    # Check if the frame was successfully captured\n",
     "    if not ret:\n",
+    "        # If not, break out of the loop\n",
     "        break\n",
+    "    \n",
+    "    image = evaluateimg(frame)\n",
     "\n",
-    "    # Display the captured frame on the screen\n",
+    "    # Process the captured frame using the 'evaluateimg' function\\\n",
+    "    # This function likely performs image segmentation using a pre-trained model\n",
+    "\n",
+    "    # Display the processed frame on the screen\n",
     "    cv2.imshow(\"Camera Output\", image)\n",
     "\n",
-    "    # Break the loop if the 'q' key is pressed\n",
+    "    # Check if the 'q' key is pressed to exit the loop\n",
     "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
     "        break\n",
-    "# Release the webcam and close all OpenCV windows\n",
+    "\n",
+    "# Release the webcam (release camera resources)\n",
     "cap.release()\n",
-    "cv2.destroyAllWindows()"
+    "\n",
+    "# Close all OpenCV windows\n",
+    "\n",
+    "cv2.destroyAllWindows()\n"
    ]
   },
   {
@@ -320,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
