--- a/webcam_segmentation.ipynb
+++ b/webcam_segmentation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "914bb152",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "4efb0a6e",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7c78ad97",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b00eb48b",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "dcea431d",
    "metadata": {},
    "outputs": [
@@ -85,9 +85,9 @@
      "text": [
       "C:\\Users\\deepa\\anaconda3\\envs\\newenv\\lib\\site-packages\\torch\\jit\\_recursive.py:260: UserWarning: 'lat_layers' was found in ScriptModule constants,  but it is a non-constant submodule. Consider removing it.\n",
       "  warnings.warn(\"'{}' was found in ScriptModule constants, \"\n",
-      "C:\\Users\\deepa\\anaconda3\\envs\\newenv\\lib\\site-packages\\torch\\jit\\_recursive.py:260: UserWarning: 'downsample_layers' was found in ScriptModule constants,  but it is a non-constant submodule. Consider removing it.\n",
-      "  warnings.warn(\"'{}' was found in ScriptModule constants, \"\n",
       "C:\\Users\\deepa\\anaconda3\\envs\\newenv\\lib\\site-packages\\torch\\jit\\_recursive.py:260: UserWarning: 'pred_layers' was found in ScriptModule constants,  but it is a non-constant submodule. Consider removing it.\n",
+      "  warnings.warn(\"'{}' was found in ScriptModule constants, \"\n",
+      "C:\\Users\\deepa\\anaconda3\\envs\\newenv\\lib\\site-packages\\torch\\jit\\_recursive.py:260: UserWarning: 'downsample_layers' was found in ScriptModule constants,  but it is a non-constant submodule. Consider removing it.\n",
       "  warnings.warn(\"'{}' was found in ScriptModule constants, \"\n"
      ]
     },
@@ -112,45 +112,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "fea1d96c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#FOR POST PROCESSING OF IMAGE \n",
-    "\n",
+    "# Define a function to prepare and display segmentation results\n",
     "def prep_display(dets_out, img, h, w, undo_transform=True, class_color=False, mask_alpha=0.45, fps_str=''):\n",
     "    \n",
+    "    # Check if we need to undo image transformation\n",
     "    if undo_transform:\n",
-    "        img_numpy = undo_image_transformation(img, w, h)\n",
-    "        img_gpu = torch.Tensor(img_numpy).cuda()\n",
+    "        img_numpy = undo_image_transformation(img, w, h)  # Undo image transformation\n",
+    "        img_gpu = torch.Tensor(img_numpy).cuda()  # Transfer to GPU\n",
     "    else:\n",
-    "        img_gpu = img / 255.0\n",
+    "        img_gpu = img / 255.0  # Normalize image if not transformed\n",
     "        h, w, _ = img.shape\n",
     "    \n",
+    "    # Perform post-processing on detection results\n",
     "    with timer.env('Postprocess'):\n",
     "        save = cfg.rescore_bbox\n",
     "        cfg.rescore_bbox = True\n",
-    "        t = postprocess(dets_out, w, h, visualize_lincomb = False,\n",
-    "                                        crop_masks        = True,\n",
-    "                                        score_threshold   = 0)\n",
+    "        t = postprocess(dets_out, w, h, visualize_lincomb=False,\n",
+    "                                        crop_masks=True,\n",
+    "                                        score_threshold=0)\n",
     "        cfg.rescore_bbox = save\n",
     "    \n",
-    "\n",
     "    with timer.env('Copy'):\n",
-    "        idx = t[1].argsort(0, descending=True)[:top_k]\n",
+    "        idx = t[1].argsort(0, descending=True)[:top_k]  # Sort and select top detections\n",
     "        \n",
     "        if cfg.eval_mask_branch:\n",
-    "            # Masks are drawn on the GPU, so don't copy\n",
-    "            masks = t[3][idx]\n",
-    "        classes, scores, boxes = [x[idx].cpu().numpy() for x in t[:3]]\n",
+    "            masks = t[3][idx]  # Extract masks if available\n",
+    "        classes, scores, boxes = [x[idx].cpu().numpy() for x in t[:3]]  # Extract classes, scores, and boxes\n",
     "\n",
+    "    # Determine the number of detections to consider\n",
     "    num_dets_to_consider = min(top_k, classes.shape[0])\n",
     "    for j in range(num_dets_to_consider):\n",
     "        if scores[j] < sc:\n",
     "            num_dets_to_consider = j\n",
     "            break\n",
     "\n",
+    "    # Define a function to get color for class/category\n",
     "    def get_color(j, on_gpu=None):\n",
     "        global color_cache\n",
     "        color_idx = (classes[j] * 5 if class_color else j * 5) % len(COLORS)\n",
@@ -212,33 +213,40 @@
     "                cv2.rectangle(img_numpy, (x1, y1), (x1 + text_w, y1 - text_h - 4), color, -1)\n",
     "                cv2.putText(img_numpy, text_str, text_pt, font_face, font_scale, text_color, font_thickness, cv2.LINE_AA)\n",
     "    \n",
-    "    return img_numpy"
+    "    return img_numpy\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "01a63ec5",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define a function to evaluate an image using a segmentation model\n",
     "def evaluateimg(img):\n",
     "    \n",
+    "    # Convert the image to a PyTorch tensor and transfer it to the GPU\n",
     "    frame = torch.from_numpy(img).cuda().float()\n",
     "\n",
+    "    # Apply FastBaseTransform to prepare the image for model evaluation\n",
     "    batch = FastBaseTransform()(frame.unsqueeze(0))\n",
+    "    \n",
+    "    # Disable gradient tracking for model inference\n",
     "    with torch.no_grad():\n",
-    "        preds = net(batch)\n",
+    "        preds = net(batch)  # Pass the image through the segmentation model\n",
     "\n",
+    "    # Prepare the segmented image for display and return it\n",
     "    res = prep_display(preds, frame, None, None, undo_transform=False)\n",
     "    return res\n",
     "\n",
-    " image = evaluateimg(frame)"
+    "    # Example of how to use the 'evaluateimg' function\n",
+    "    image = evaluateimg(frame)  # 'frame' is assumed to be an input image here\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "fcc98ec7",
    "metadata": {
     "scrolled": true
