UI added for some parameters

--- a/webcam_segmentation.ipynb
+++ b/webcam_segmentation.ipynb
@@ -8,7 +8,6 @@
    "outputs": [],
    "source": [
     "#requirments if not installed\n",
-    "\n",
     "# !pip3 install torch torchvision --index-url https://download.pytorch.org/whl/cu118\n",
     "# !pip install opencv-python\n",
     "# !pip install pycocotools\n",
@@ -17,13 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 171,
    "id": "4efb0a6e",
    "metadata": {},
    "outputs": [],
    "source": [
     "#imports\n",
-    "\n",
     "import torch\n",
     "import cv2\n",
     "from yolact import Yolact\n",
@@ -33,97 +31,114 @@
     "from utils import timer\n",
     "from data import cfg\n",
     "from layers.output_utils import postprocess\n",
-    "from data import COLORS"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "7c78ad97",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#IF CUUDA added \n",
-    "#FOR NOW IT WORKS ONLU ON CUDA MODE\n",
+    "from data import COLORS\n",
     "\n",
-    "if torch.cuda.is_available():\n",
-    "    cudnn.fastest = True\n",
-    "    torch.set_default_tensor_type('torch.cuda.FloatTensor')"
+    "import tkinter as tk\n",
+    "from tkinter import ttk\n",
+    "import PIL.Image, PIL.ImageTk\n",
+    "from tkinter import BooleanVar, Scale\n",
+    "from PIL import Image, ImageTk"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 172,
    "id": "b00eb48b",
    "metadata": {},
    "outputs": [],
    "source": [
     "##SOME PARAMETERS ARGS\n",
+    "global net\n",
+    "global cuda_enabled\n",
+    "global sc\n",
+    "global top_k\n",
+    "global display_text_bbx_enabled\n",
+    "global img_scale\n",
+    "global class_list\n",
+    "\n",
+    "class_list = set()\n",
+    "cuda_enabled = torch.cuda.is_available()\n",
+    "display_masks_enabled = cuda_enabled\n",
+    "img_scale=1\n",
     "sc=0.45\n",
     "top_k =15\n",
     "color_cache = defaultdict(lambda: {})\n",
-    "display_masks=True;\n",
-    "display_text_bbx=True;"
+    "display_text_bbx_enabled=True;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "dcea431d",
+   "execution_count": 173,
+   "id": "91cd53d7",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading model..."
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\deepa\\anaconda3\\envs\\newenv\\lib\\site-packages\\torch\\jit\\_recursive.py:260: UserWarning: 'lat_layers' was found in ScriptModule constants,  but it is a non-constant submodule. Consider removing it.\n",
-      "  warnings.warn(\"'{}' was found in ScriptModule constants, \"\n",
-      "C:\\Users\\deepa\\anaconda3\\envs\\newenv\\lib\\site-packages\\torch\\jit\\_recursive.py:260: UserWarning: 'pred_layers' was found in ScriptModule constants,  but it is a non-constant submodule. Consider removing it.\n",
-      "  warnings.warn(\"'{}' was found in ScriptModule constants, \"\n",
-      "C:\\Users\\deepa\\anaconda3\\envs\\newenv\\lib\\site-packages\\torch\\jit\\_recursive.py:260: UserWarning: 'downsample_layers' was found in ScriptModule constants,  but it is a non-constant submodule. Consider removing it.\n",
-      "  warnings.warn(\"'{}' was found in ScriptModule constants, \"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Done.\n"
+      "Loading model... Done.\n"
      ]
     }
    ],
    "source": [
-    "#LOADING MODEL\n",
-    "\n",
     "print('Loading model...', end='')\n",
     "net = Yolact()\n",
     "net.load_weights(\"model/yolact_base_54_800000.pth\")\n",
     "net.eval()\n",
-    "net.cuda()\n",
     "print(' Done.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 174,
+   "id": "7c78ad97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#IF CUUDA added \n",
+    "#FOR NOW IT WORKS ONLU ON CUDA MODE\n",
+    "def set_default():\n",
+    "    if cuda_enabled and torch.cuda.is_available():\n",
+    "        cudnn.fastest = True\n",
+    "        torch.set_default_tensor_type('torch.cuda.FloatTensor')\n",
+    "    else:\n",
+    "        cudnn.fastest = False\n",
+    "        torch.set_default_tensor_type('torch.FloatTensor')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "id": "dcea431d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#LOADING MODEL\n",
+    "def load_model():\n",
+    "    if cuda_enabled:\n",
+    "        net.cuda()\n",
+    "    else:\n",
+    "        net.cpu()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
    "id": "fea1d96c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define a function to prepare and display segmentation results\n",
+    "\n",
     "def prep_display(dets_out, img, h, w, undo_transform=True, class_color=False, mask_alpha=0.45, fps_str=''):\n",
     "    \n",
     "    # Check if we need to undo image transformation\n",
     "    if undo_transform:\n",
     "        img_numpy = undo_image_transformation(img, w, h)  # Undo image transformation\n",
-    "        img_gpu = torch.Tensor(img_numpy).cuda()  # Transfer to GPU\n",
+    "        if cuda_enabled:\n",
+    "            img_gpu = torch.Tensor(img_numpy).cuda()  # Transfer to CPU\n",
+    "        else:\n",
+    "            img_gpu = torch.Tensor(img_numpy).cpu()  # Transfer to GPU\n",
     "    else:\n",
     "        img_gpu = img / 255.0  # Normalize image if not transformed\n",
     "        h, w, _ = img.shape\n",
@@ -168,7 +183,7 @@
     "                color_cache[on_gpu][color_idx] = color\n",
     "            return color\n",
     "\n",
-    "    if display_masks and cfg.eval_mask_branch and num_dets_to_consider > 0:\n",
+    "    if display_masks_enabled and cuda_enabled and cfg.eval_mask_branch and num_dets_to_consider > 0:\n",
     "        # After this, mask is of size [num_dets, h, w, 1]\n",
     "        masks = masks[:num_dets_to_consider, :, :, None]\n",
     "        colors = torch.cat([get_color(j, on_gpu=img_gpu.device.index).view(1, 1, 1, 3) for j in range(num_dets_to_consider)], dim=0)\n",
@@ -189,7 +204,7 @@
     "    if num_dets_to_consider == 0:\n",
     "        return img_numpy\n",
     "\n",
-    "    if display_text_bbx:\n",
+    "    if display_text_bbx_enabled:\n",
     "        for j in reversed(range(num_dets_to_consider)):\n",
     "            x1, y1, x2, y2 = boxes[j, :]\n",
     "            color = get_color(j)\n",
@@ -200,6 +215,8 @@
     "                \n",
     "                _class = cfg.dataset.class_names[classes[j]]\n",
     "                text_str = '%s: %.2f' % (_class, score) if True else _class\n",
+    "                class_list.add(_class)\n",
+    "                \n",
     "\n",
     "                font_face = cv2.FONT_HERSHEY_DUPLEX\n",
     "                font_scale = 0.6\n",
@@ -218,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 177,
    "id": "01a63ec5",
    "metadata": {},
    "outputs": [],
@@ -227,7 +244,10 @@
     "def evaluateimg(img):\n",
     "    \n",
     "    # Convert the image to a PyTorch tensor and transfer it to the GPU\n",
-    "    frame = torch.from_numpy(img).cuda().float()\n",
+    "    if cuda_enabled:\n",
+    "        frame = torch.from_numpy(img).cuda().float()\n",
+    "    else:\n",
+    "        frame = torch.from_numpy(img).cpu().float()\n",
     "\n",
     "    # Apply FastBaseTransform to prepare the image for model evaluation\n",
     "    batch = FastBaseTransform()(frame.unsqueeze(0))\n",
@@ -246,16 +266,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 178,
+   "id": "b76e908c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def setting():\n",
+    "    set_default()\n",
+    "    load_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
    "id": "fcc98ec7",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n\\nsetting()\\n# Open the default camera (camera index 0)\\ncap = cv2.VideoCapture(0)\\n# Continuously capture frames from the webcam\\nwhile True:\\n    # Read a frame from the camera\\n    ret, frame = cap.read()\\n\\n    # Check if the frame was successfully captured\\n    if not ret:\\n        # If not, break out of the loop\\n        break\\n    \\n    image = evaluateimg(frame)\\n    cv2.imshow(\"Camera Output\", image)\\n\\n    # Check if the \\'q\\' key is pressed to exit the loop\\n    if cv2.waitKey(1) & 0xFF == ord(\\'q\\'):\\n        break\\n\\n# Release the webcam (release camera resources)\\ncap.release()\\n\\n# Close all OpenCV windows\\n\\ncv2.destroyAllWindows()\\n\\nprint(\"classes we found in image\", class_list)\\n\\n'"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "# test code\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "setting()\n",
     "# Open the default camera (camera index 0)\n",
     "cap = cv2.VideoCapture(0)\n",
-    "\n",
     "# Continuously capture frames from the webcam\n",
     "while True:\n",
     "    # Read a frame from the camera\n",
@@ -267,11 +314,6 @@
     "        break\n",
     "    \n",
     "    image = evaluateimg(frame)\n",
-    "\n",
-    "    # Process the captured frame using the 'evaluateimg' function\\\n",
-    "    # This function likely performs image segmentation using a pre-trained model\n",
-    "\n",
-    "    # Display the processed frame on the screen\n",
     "    cv2.imshow(\"Camera Output\", image)\n",
     "\n",
     "    # Check if the 'q' key is pressed to exit the loop\n",
@@ -283,29 +325,192 @@
     "\n",
     "# Close all OpenCV windows\n",
     "\n",
+    "cv2.destroyAllWindows()\n",
+    "\n",
+    "print(\"classes we found in image\", class_list)\n",
+    "\n",
+    "'''\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "id": "a434084f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_camera_feed():\n",
+    "    global class_list\n",
+    "    ret, frame = cap.read()  # Capture a frame from the webcam\n",
+    "    \n",
+    "    if ret:\n",
+    "        class_list.clear()\n",
+    "        # Convert the OpenCV frame to a format suitable for Tkinter\n",
+    "        image = evaluateimg(frame)\n",
+    "\n",
+    "        #cv2.imshow('output detection', image)\n",
+    "        img = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
+    "        img = PIL.Image.fromarray(img)\n",
+    "        w, h = img.size\n",
+    "        img = img.resize((int(w*img_scale), int(h*img_scale)))\n",
+    "        img = PIL.ImageTk.PhotoImage(image=img)\n",
+    "\n",
+    "        # Update the label with the new frame\n",
+    "        label.config(image=img)\n",
+    "        label.image = img\n",
+    "        \n",
+    "\n",
+    "    # Schedule the next update\n",
+    "    root.after(10, update_camera_feed)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "id": "1764d657",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def toggle_cuda():\n",
+    "    global cuda_enabled\n",
+    "    cuda_enabled = cuda_var.get()\n",
+    "    if cuda_enabled:\n",
+    "        display_masks_checkbox.config(state=\"normal\")  # Enable the checkbox\n",
+    "    else:\n",
+    "        display_masks_checkbox.config(state=\"disabled\")  # Disable the checkbox\n",
+    "    setting()\n",
+    "\n",
+    "def update_sc(value):\n",
+    "    global sc\n",
+    "    sc = float(value)\n",
+    "    \n",
+    "def update_img_scale(value):\n",
+    "    global img_scale\n",
+    "    img_scale = float(value)\n",
+    "\n",
+    "def update_top_k(value):\n",
+    "    global top_k\n",
+    "    top_k = int(value)\n",
+    "\n",
+    "def toggle_display_masks():\n",
+    "    global display_masks_enabled\n",
+    "    display_masks_enabled = display_masks_var.get()\n",
+    "\n",
+    "def toggle_display_text_bbx():\n",
+    "    global display_text_bbx_enabled\n",
+    "    display_text_bbx_enabled = display_text_bbx_var.get()\n",
+    "    setting()\n",
+    "    \n",
+    "def update_set_label():\n",
+    "    current_contents = '\\n'.join(class_list)  \n",
+    "    set_label.config(text=current_contents)\n",
+    "    root.after(1000, update_set_label)  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "id": "f11af102",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "setting()\n",
+    "class_list=set()\n",
+    "root = tk.Tk()\n",
+    "root.title(\"Camera Feed\")\n",
+    "\n",
+    "cap = cv2.VideoCapture(0)\n",
+    "\n",
+    "label = ttk.Label(root)\n",
+    "label.pack(side=\"right\")\n",
+    "\n",
+    "#variables\n",
+    "cuda_var = BooleanVar()\n",
+    "display_masks_var = BooleanVar()\n",
+    "display_text_bbx_var = BooleanVar()\n",
+    "\n",
+    "cuda_var.set(cuda_enabled)\n",
+    "display_masks_var.set(display_masks_enabled)\n",
+    "display_text_bbx_var.set(display_text_bbx_enabled)\n",
+    "\n",
+    "# Checkboxes\n",
+    "\n",
+    "cuda_checkbox = ttk.Checkbutton(root, text=\"CUDA Enable\", variable=cuda_var, command=toggle_cuda)\n",
+    "cuda_checkbox.pack()\n",
+    "\n",
+    "display_masks_checkbox = ttk.Checkbutton(root, text=\"Display Masks\", variable=display_masks_var, command=toggle_display_masks)\n",
+    "display_masks_checkbox.pack()\n",
+    "\n",
+    "display_text_bbx_checkbox = ttk.Checkbutton(root, text=\"Display Text/BBX\", variable=display_text_bbx_var, command=toggle_display_text_bbx)\n",
+    "display_text_bbx_checkbox.pack()\n",
+    "\n",
+    "# Sliders\n",
+    "sc_label = ttk.Label(root, text=\"Select Criteria\")\n",
+    "sc_label.pack()\n",
+    "sc_scale = Scale(root, from_=0, to=1, resolution=0.01, orient=\"horizontal\", command=update_sc)\n",
+    "sc_scale.set(sc)\n",
+    "sc_scale.pack()\n",
+    "\n",
+    "img_scale_label = ttk.Label(root, text=\"Image Scale\")\n",
+    "img_scale_label.pack()\n",
+    "img_scale_label = Scale(root, from_=0.5, to=2, resolution=0.01, orient=\"horizontal\", command=update_img_scale)\n",
+    "img_scale_label.set(img_scale)\n",
+    "img_scale_label.pack()\n",
+    "\n",
+    "top_k_label = ttk.Label(root, text=\"Top K Boxes\")\n",
+    "top_k_label.pack()\n",
+    "top_k_scale = Scale(root, from_=1, to=100, orient=\"horizontal\", command=update_top_k)\n",
+    "top_k_scale.set(top_k)\n",
+    "top_k_scale.pack()\n",
+    "\n",
+    "# Create a label for displaying dynamic strings\n",
+    "set_label = ttk.Label(root, text=\"\")\n",
+    "set_label.pack()\n",
+    "\n",
+    "update_camera_feed()\n",
+    "update_set_label()\n",
+    "\n",
+    "root.mainloop()\n",
+    "cap.release()\n",
     "cv2.destroyAllWindows()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a37921b7",
+   "execution_count": 183,
+   "id": "5f0733e5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#if shows pyimageXX error run this and cut all windows and re run\n",
+    "root.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "id": "7b4729ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'person'}"
+      ]
+     },
+     "execution_count": 184,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class_list"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0ba5fc8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f11af102",
+   "id": "41e3958c",
    "metadata": {},
    "outputs": [],
    "source": []
